fixed color of phone number on mobile overlay

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -123,7 +123,7 @@ span.way {
 }
 
 .navWrapper .overlay .wrap ul.wrap-nav li a {
-  color:#34B484;
+  color: #fff;
   display: block;
   text-decoration: none;
 }
